--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -16,15 +16,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Generate new discussion
         id: create-discussion
-        uses: benbalter/create-discussion@use-actions-toolkit
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
+        uses: benbalter/create-discussion@fetch-repo-id-and-category-id
         with:
           title: "New Discussion ${{ env.DATE }} in General"
           body: |
             Let's Discuss!
-          repository-id: 'R_kgDOOIs2Xw'
-          category-id: 'DIC_kwDOOIs2X84CoCoT' 
 
       - name: Generate new discussion using file
         id: create-discussion-with-file
@@ -34,5 +30,5 @@ jobs:
         with:
           title: "New Discussion ${{ env.DATE }} in General"
           body-filepath: 'zen.txt'
-          repository-id: 'R_kgDOOIs2Xw'
-          category-id: 'DIC_kwDOOIs2X84CoCoT'           
+          repository-name: benbalter/create-discussion
+          category-name: General      
